--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
     "autoprefixer": "^10.4.18",
+    "flowbite": "^2.3.0",
     "postcss": "^8.4.35",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.4.1",
